# shoutrrr

./: .all-contributorsrc  .codacy.yml  .gitignore  404.html  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  TODO.md  build.sh  config.yml  generate-release-notes.sh  generate-service-config-docs.sh  go.mod  go.sum  goreleaser.yml  index.html  mkdocs.yml  shoutrrr.go  sitemap.xml  versions.json
.circleci/: config.yml
.clusterfuzzlite/: Dockerfile  build.sh
.github/: dependabot.yml  pull_request_template.md
0.4/: 404.html  index.html  sitemap.xml
0.5/: 404.html  index.html  sitemap.xml
0.7/: 404.html  index.html  sitemap.xml
cli/: main.go
dev/: 404.html  index.html  sitemap.xml
docs/: README.md  getting-started.md  index.md  proxy.md
fuzz/: partition_message.go
getting-started/: index.html
latest/: 404.html  index.html
proxy/: index.html
rust/: Cargo.toml
rust/cli/: Cargo.toml
rust/cli/src/: clapex.rs  lib.rs  parse.rs
rust/core/: Cargo.toml
rust/core/src/: lib.rs
rust/core/src/spec/: mod.rs  service_spec.rs
search/: search_index.json
services/: 404.html
shoutrrr/: Dockerfile  main.go
shoutrrr-gen/: main.go
snap/: snapcraft.yaml
spec/: bark.yml  discord.yml  generic.yml  googlechat.yml  gotify.yml  hangouts.yml  ifttt.yml  join.yml  logger.yml  matrix.yml  mattermost.yml  opsgenie.yml  pushbullet.yml  pushover.yml  rocketchat.yml  slack.yml  smtp.yml  teams.yml  telegram.yml  zulip.yml
v0.4/: 404.html  index.html  sitemap.xml
v0.5/: 404.html  index.html  sitemap.xml
v0.6/: 404.html  index.html  sitemap.xml
(+940 files in other folders)
