[package]
name = "shoutrrr-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap       = { version = "4.0.29", features = ["derive"] }
color-eyre = { version = "0.6.2" }
dbg-pls    = { version = "0.3.3", features = ["colors", "derive"] }
eyre       = { version = "0.6.8" }
genco      = { version = "0.17.2" }
serde      = { version = "1.0.140", features = [ "derive" ] }
serde_yaml = { version = "0.8.26"  }
shoutrrr   = { path = "../core", features = ["dbg-pls", "serde"]}
strsim     = { version = "0.10.0"  }