[package]
name = "shoutrrr"
version = "0.1.0"
edition = "2021"

[features]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# color-eyre = { version = "0.6.2" }
dbg-pls    = { version = "0.3.3", features = ["colors", "derive"], optional = true}
eyre       = { version = "0.6.8" }
serde      = { version = "1.0.140", features = [ "derive" ], optional = true }
serde_yaml = { version = "0.8.26"  }
